Apply a width factor on CJK characters when measuring the length Close #1

--- a/tests/fixtures/golden.po
+++ b/tests/fixtures/golden.po
@@ -34,16 +34,19 @@ msgid ""
 "component of Flask in detail, with a full reference in the :doc:`api` "
 "section."
 msgstr ""
-"欢迎来到 Flask 的文档。你可以从 :doc:`installation` 入手，然后阅读:doc:`quickstart` "
+"欢迎来到 Flask 的文档。你可以从 :doc:`installation` "
+"入手，然后阅读:doc:`quickstart` "
 "来了解基本概念。还有一个包含更多细节的:doc:`tutorial/index` 介绍如何用 Flask "
-"创建一个很小但是完整的程序。一般的开发模式可以在:doc:`patterns/index` 章节找到。剩下的文档详细的介绍了 Flask "
-"的每一个组成部件，其中:doc:`api` 章节包括完整的 API 参考信息。"
+"创建一个很小但是完整的程序。一般的开发模式可以在:doc:`patterns/index` "
+"章节找到。剩下的文档详细的介绍了 Flask 的每一个组成部件，其中:doc:`api` "
+"章节包括完整的 API 参考信息。"
 
 #: ../../index.rst:19
 msgid ""
 "Flask depends on the `Jinja`_ template engine and the `Werkzeug`_ WSGI "
 "toolkit. The documentation for these libraries can be found at:"
-msgstr "Flask 依赖 `Jinja`_ 模板引擎和 `Werkzeug`_ WSGI 工具集。这些库的文档如下："
+msgstr ""
+"Flask 依赖 `Jinja`_ 模板引擎和 `Werkzeug`_ WSGI 工具集。这些库的文档如下："
 
 #: ../../index.rst:22
 msgid "`Jinja documentation <https://jinja.palletsprojects.com/>`_"
@@ -62,7 +65,9 @@ msgid ""
 "This part of the documentation, which is mostly prose, begins with some "
 "background information about Flask, then focuses on step-by-step "
 "instructions for web development with Flask."
-msgstr "这部分的文档大部分是独立章节，以一些关于 Flask 的背景信息开始，然后重点介绍如何使用 Flask 一步步进行 Web 开发。"
+msgstr ""
+"这部分的文档大部分是独立章节，以一些关于 Flask 的背景信息开始，然后重点介绍如何使用 "
+"Flask 一步步进行 Web 开发。"
 
 #: ../../index.rst:66
 msgid "API Reference"
